[gd_scene load_steps=7 format=3 uid="uid://dsw8raqgacxsc"]

[ext_resource type="Script" uid="uid://c2thcq2amkjf1" path="res://Player/player.gd" id="1_73bic"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://Player/happy_boo.tscn" id="2_bl5ih"]
[ext_resource type="PackedScene" uid="uid://cphcr81upg72i" path="res://Player/Gun/gun.tscn" id="3_bt0kc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csncd"]
size = Vector2(66, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kfffa"]
size = Vector2(84, 54)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5sny"]
bg_color = Color(0.623529, 0.866667, 0.317647, 1)

[node name="Player" type="CharacterBody2D"]
platform_floor_layers = 4294967040
script = ExtResource("1_73bic")

[node name="HappyBoo" parent="." instance=ExtResource("2_bl5ih")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_csncd")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Gun" parent="." instance=ExtResource("3_bt0kc")]
position = Vector2(-14, -9)

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_kfffa")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
z_index = 100
offset_left = -83.0
offset_top = -185.0
offset_right = 87.0
offset_bottom = -150.0
theme_override_styles/fill = SubResource("StyleBoxFlat_a5sny")
value = 100.0
show_percentage = false

[node name="LevelLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -140.0
offset_right = 20.0
offset_bottom = -98.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "L1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GunLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = 20.0
offset_right = 96.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Machine Gun"
horizontal_alignment = 1
vertical_alignment = 1
